# hyper-lang

./: .gitattributes  .gitignore  CMakeLists.txt  Makefile.linux  Makefile.mingw
examples/: package.yml
examples/src/: calculator.hxp  hello_world.hxp  todo_app.hxp
include/: hpm.h  hpx.h  hyp_common.h  hyp_runtime.h  lexer.h  parser.h  transpiler.h
lib/: index.hxp
lib/gui/: components.hxp
lib/http/: client.hxp
lib/mikohyper/: core.hxp
lib/systemio/: index.hxp
lib/systemio/fs/: filesystem.hxp
lib/systemio/network/: network.hxp
lib/systemio/process/: process.hxp
src/common/: hyp_common.c
src/hpm/: hpm.c  main.c
src/hpx/: hpx.c  main.c
src/hypc/: main.c
src/hyprun/: main.c
src/lexer/: lexer.c
src/parser/: parser.c
src/runtime/: hyp_runtime.c
src/transpiler/: transpiler.c
